<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">
    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Webview_signup"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:layout_toStartOf="@id/viewSupporter"
        android:layout_marginEnd="10dp"
        android:text="@string/back"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_signup"
        android:layout_toEndOf="@id/viewSupporter"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="10dp"
        android:text="Sign up"/>
    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/txt_4"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_above="@id/btn_signup"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_ic"
        android:drawablePadding="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"></EditText>

    <EditText
        android:id="@+id/txt_3"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_above="@id/txt_4"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_ic"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"></EditText>

    <EditText
        android:id="@+id/txt_2"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_above="@id/txt_3"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_ic"
        android:drawablePadding="10dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"></EditText>

    <EditText
        android:id="@+id/txt_1"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_above="@id/txt_2"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person_ic"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="textPersonName"></EditText>
</RelativeLayout>