<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/daylight"
        android:scaleType="centerCrop"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_intro_screen" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0">
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.4">
            <View
                android:id="@+id/viewSupporter"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                />
            <ImageView
                android:id="@+id/facebookImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/facebook"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="6dp"
                android:layout_toStartOf="@id/viewSupporter"/>
            <ImageView
                android:id="@+id/googleImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/google"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:layout_toEndOf="@id/viewSupporter"/>
            <TextView
                android:id="@+id/textSignInWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/facebookImage"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:text="@string/or_sign_in_with"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTitle"
                android:layout_marginBottom="6dp"
                android:text="Weather\nApplication"
                android:textColor="@color/colorWhite"
                android:textSize="48sp"
                android:textStyle="bold"
                android:layout_alignStart="@id/textTagLine"
                android:layout_alignEnd="@id/textTagLine"
                android:layout_above="@id/textTagLine"/>
            <TextView
                android:id="@+id/textTagLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/signInButton"
                android:layout_marginBottom="15dp"
                android:text="@string/tagLine"
                android:layout_alignStart="@id/signInButton"
                android:textColor="@android:color/white"
                android:layout_above="@id/signInButton"/>
            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/background_for_sign_in_button"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:layout_above="@id/buttonSignUp"
                android:id="@+id/signInButton"/>
            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="250dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_for_signup_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:layout_above="@id/textSignInWith"
                android:textSize="18sp"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">
            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:clickable="true"
                android:text="@string/forgot_your_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
